refactor(系统设置): 项目不能删除最后一个管理员